--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 	<properties>
 		<revision>0.16</revision>
 		<changelist>-SNAPSHOT</changelist>
-		<jenkins.version>2.249.1</jenkins.version>
+		<!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
+		<jenkins.baseline>2.249</jenkins.baseline>
+		<jenkins.version>${jenkins.baseline}.1</jenkins.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<gitHubRepo>jenkinsci/exclusion-plugin</gitHubRepo>
 		<spotbugs.skip>true</spotbugs.skip>
@@ -49,7 +51,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>io.jenkins.tools.bom</groupId>
-				<artifactId>bom-2.249.x</artifactId>
+				<artifactId>bom-${jenkins.baseline}.x</artifactId>
 				<version>984.vb5eaac999a7e</version>
 				<scope>import</scope>
 				<type>pom</type>
